Add to homescreen functionality

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <title>Prayer Clock</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   
   <!-- Google Fonts: "Amiri" (serif) and "Noto Sans" (sans-serif) -->
   <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Noto+Sans&display=swap" rel="stylesheet">
