--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   
-  <!-- Google Fonts: "Amiri" (serif) and "Noto Sans" (sans-serif) -->
+  <!-- Google Fonts: "Amiri" (serif), "Noto Sans", "Scheherazade New" -->
   <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Noto+Sans&family=Scheherazade+New&display=swap" rel="stylesheet">
 
   <style>
@@ -15,30 +15,28 @@
     body {
       margin: 0; 
       padding: 0;
-      /* Use the mosque image as a cover background */
       background: url('mosque.jpg') no-repeat center center fixed;
       background-size: cover;
-      color: #fefefe; /* Light text color for contrast against the darker sunset */
+      color: #fefefe; 
       text-align: center;
-      font-family: 'Noto Sans', sans-serif; /* default body font */
+      font-family: 'Noto Sans', sans-serif;
     }
 
     /* HEADER */
     header {
       padding: 20px;
-      /* No background, let the image show through */
       border-bottom: 1px solid rgba(255,255,255,0.2);
     }
 
     /* BISMILLAH */
     #bismillah {
-      font-family: 'Scheherazade New', serif; 
-      font-size: 4rem; /* Or bigger, e.g. 3rem, as needed */
-      font-weight: 400; /* 'normal' weight for Amiri */
-      color: #ffd700; /* A soft complementary hue (pale gold / taupe) */
-      margin: 0 0 10px 0; /* Some spacing above the date */
-      opacity: 0.85; /* Slight transparency to reduce boldness */
-      letter-spacing: 0.02em; /* subtle spacing, optional */
+      font-family: 'Scheherazade New', serif;
+      font-size: 4rem;
+      font-weight: 400;
+      color: #ffd700;
+      margin: 0 0 10px 0;
+      opacity: 0.85;
+      letter-spacing: 0.02em;
     }
 
     /* DATE INFO */
@@ -46,36 +44,34 @@
       font-size: 1.3rem;
       color: #fefefe;
       margin: 0 auto;
-      /* No background or shadow, just plain text */
       font-family: 'Amiri', serif;
     }
 
     /* NEXT PRAYER BLOCK */
-    #nextPrayerBlock {
-      /* Center and narrower width for the block */
+    #timeBlock {
       width: 90vw;
       margin: 20px auto;
-      background: rgba(0, 0, 0, 0.4); /* subtle dark overlay to help text stand out */
+      background: rgba(0, 0, 0, 0.4); 
       border-radius: 15px;
       padding: 20px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.2);
     }
 
-    /* Extra large text for visibility (~10x normal) */
-    #nextPrayerLabel {
-      font-family: 'Amiri', serif; /* more decorative font for Arabic/Islamic vibe */
-      font-size: 10vw; /* 10% of the viewport width */
-      white-space: nowrap;       /* keep text on one line */
-      overflow: hidden;          /* hide overflow if text is still too big */
-      text-overflow: ellipsis;   /* optional: show "..." if text is truncated */
-      display: inline-block;     /* or block, but inline-block typically works well with overflow */
-      color: #ffd700;            /* your chosen color */
+    /* Large label for CURRENT TIME */
+    #currentTimeLabel {
+      font-family: 'Amiri', serif;
+      font-size: 10vw; 
+      white-space: nowrap; 
+      overflow: hidden; 
+      text-overflow: ellipsis; 
+      display: inline-block;
+      color: #ffd700; 
       margin: 0;
-      /* Optionally limit maximum size so it’s not too huge on large displays */
-      max-width: 100%;           /* or some container width */
+      max-width: 100%;
     }
 
-    #countdown {
+    /* Smaller label for NEXT PRAYER */
+    #nextPrayerLabel {
       font-size: 2rem; 
       margin: 10px 0;
       color: #fefefe;
@@ -105,13 +101,12 @@
       font-family: 'Amiri', serif;
       margin: 0; 
       font-size: 1.4rem; 
-      color: #ffd700; /* same gold accent color */
+      color: #ffd700;
     }
 
     .prayer p {
       margin: 5px 0 0; 
       font-size: 1.2rem;
-      color: #fefefe;
     }
 
     /* STARTUP OVERLAY */
@@ -146,20 +141,19 @@
   <header>
     <!-- Bismillah in Arabic calligraphy style -->
     <h2 id="bismillah">بِسْمِ اللهِ الرَّحْمٰنِ الرَّحِيمِ</h2>
-    
     <div id="dateInfo">Loading Date...</div>
   </header>
 
-  <div id="nextPrayerBlock">
-    <!-- Large next prayer text -->
-    <h1 id="nextPrayerLabel">Next Prayer Loading...</h1>
-    <!-- Countdown underneath -->
-    <div id="countdown">--:--:--</div>
+  <div id="timeBlock">
+    <!-- Large current time label -->
+    <h1 id="currentTimeLabel">Loading Current Time...</h1>
+    <!-- Next prayer display -->
+    <div id="nextPrayerLabel">Next prayer: Loading...</div>
   </div>
 
   <main>
     <div class="prayer-times" id="prayerTimesContainer">
-      <!-- Each prayer time injected dynamically -->
+      <!-- Each prayer time is injected dynamically here -->
     </div>
   </main>
 
