--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       color: #fefefe;
       margin: 0 auto;
       font-family: 'Amiri', serif;
+      transition: opacity 0.3s ease;
     }
 
     /* NEXT PRAYER BLOCK */
@@ -60,14 +61,16 @@
     /* Large label for CURRENT TIME */
     #currentTimeLabel {
       font-family: 'Amiri', serif;
-      font-size: 10vw; 
-      white-space: nowrap; 
-      overflow: hidden; 
-      text-overflow: ellipsis; 
+      font-size: 14vw;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
       display: inline-block;
-      color: #ffd700; 
+      color: #ffd700;
       margin: 0;
       max-width: 100%;
+      line-height: 1.1;
+      transition: color 0.3s ease, font-size 0.3s ease;
     }
 
     /* Smaller label for NEXT PRAYER */
@@ -84,14 +87,16 @@
     /* The prayer/time detail in gold */
     #nextPrayerTextDetails {
       color: #ffd700;
+      transition: opacity 0.5s ease;
     }
 
     /* PRAYER TIMES LIST */
     .prayer-times {
-      display: flex; 
-      justify-content: center; 
-      flex-wrap: wrap; 
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
       margin-top: 30px;
+      transition: opacity 0.3s ease;
     }
 
     .prayer {
@@ -99,11 +104,12 @@
       border: 1px solid rgba(255,255,255,0.2);
       border-radius: 8px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-      width: 150px; 
+      width: 150px;
       margin: 10px;
       padding: 15px;
       font-size: 1.2rem;
       color: #fefefe;
+      transition: transform 0.3s ease, opacity 0.3s ease;
     }
 
     .prayer h2 {
@@ -143,9 +149,74 @@
     #startupOverlay button:hover {
       background: #3b8056;
     }
+
+    /* TIME-BASED DIMMING OVERLAY */
+    #timeDimOverlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0);
+      pointer-events: none;
+      z-index: 1;
+      transition: background 300s ease; /* 5-minute smooth transition */
+    }
+
+    #timeDimOverlay.night-mode {
+      background: rgba(0, 0, 0, 0.4);
+    }
+
+    /* Ensure other content is above overlay */
+    header, #timeBlock, main {
+      position: relative;
+      z-index: 2;
+    }
+
+    /* PRAYER APPROACHING ICON */
+    .prayer-icon {
+      display: none;
+      font-size: 3rem;
+      margin: 0 15px;
+      vertical-align: middle;
+    }
+
+    /* When prayer is approaching - show and animate icon */
+    #nextPrayerLabel.prayer-approaching .prayer-icon {
+      display: inline;
+      animation: bell-ring 2s ease-in-out infinite;
+    }
+
+    @keyframes bell-ring {
+      0%, 100% {
+        transform: rotate(0deg);
+      }
+      10%, 30% {
+        transform: rotate(-15deg);
+      }
+      20%, 40% {
+        transform: rotate(15deg);
+      }
+      50% {
+        transform: rotate(0deg);
+      }
+    }
+
+    /* ISLAMIC DATE HIGHLIGHTING */
+    .hijri-date {
+      transition: color 0.3s ease;
+    }
+
+    .hijri-date.special-date {
+      color: #90EE90;  /* Light green for special dates */
+      font-weight: 600;
+      text-shadow: 0 0 10px rgba(144, 238, 144, 0.3);
+    }
   </style>
 </head>
 <body>
+
+  <div id="timeDimOverlay"></div>
 
   <header>
     <!-- Bismillah in Arabic calligraphy style -->
@@ -159,6 +230,7 @@
     <!-- Next prayer display broken into two spans -->
     <div id="nextPrayerLabel">
       <span id="nextPrayerTextPrefix">Next prayer: </span>
+      <span id="approachingIcon" class="prayer-icon">🔔</span>
       <span id="nextPrayerTextDetails">Loading...</span>
     </div>
   </div>
